# API/schemas/__init__.py
@@ -3,7 +3,7 @@ from API.schemas.inference import (
     EmbedRequest, EmbedResponse, EmbedResult, EvalReport, DriftSignal,
 )
 from API.schemas.relearn import RelearnRequest, RelearnJob, RelearnMethod, SplitSpec, RunConfig
-from API.schemas.train import TrainRequest, TrainJob
+from API.schemas.train import TrainRequest, TrainJob, TrainConfig
 from API.schemas.dataset import (
     DatasetIngestRequest, DatasetRow, DataConfigOverride, DatasetJob,
 )
@@ -12,6 +12,6 @@ __all__ = [
     "InferenceRequest", "InferenceConfig", "InferenceResponse", "FunctionResult", "SuspiciousLine",
     "EmbedRequest", "EmbedResponse", "EmbedResult", "EvalReport", "DriftSignal",
     "RelearnRequest", "RelearnJob", "RelearnMethod", "SplitSpec", "RunConfig",
-    "TrainRequest", "TrainJob",
+    "TrainRequest", "TrainJob", "TrainConfig",
     "DatasetIngestRequest", "DatasetRow", "DataConfigOverride", "DatasetJob",
 ]
